Dev - Minor changes, fixed scrollbar for small articles

--- a/styles/main.css
+++ b/styles/main.css
@@ -109,9 +109,15 @@ main {
     transition: width var(--transition-duration) ease;
 }
 
+#nav-bar .nav-button:focus-visible {
+    outline: none;
+}
+
 
 #nav-bar .nav-button:not(#theme-toggle, #lang-selector):hover {
     width: var(--nav-bar-w);
+    border: 1px solid var(--lightest-color);
+    border-left: none;
 }
 
 /*noinspection CssInvalidPropertyValue*/
@@ -437,12 +443,12 @@ article.collapsed .article-content {
     width: 100%;
     height: 100%;
     color: var(--lightest-color);
-    font-size: 1.25rem;
+    font-size: 1.35rem;
     font-weight: bold;
     text-shadow: 0 0 5px rgba(0, 0, 0, 1);
     text-decoration: none;
-    border-radius: 12px;
-    padding: 5px;
+    border-radius: var(--border-r);
+    padding: .5rem;
     box-sizing: border-box;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -456,6 +462,15 @@ article.collapsed .article-content {
     align-items: center;
     width: 100%;
     flex-wrap: wrap;
+
+    ::-webkit-scrollbar {
+        width: .5rem;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        border: 0.16rem solid var(--darkest-color);
+    }
+
 }
 
 .news-container a, .articles-container a {
@@ -492,10 +507,11 @@ article.collapsed .article-content {
     height: 100%;
     object-fit: cover;
     transition: transform 0.2s ease;
+    border-radius: 12px 0 0 12px;
 }
 
 .resource-card:hover .resource-card-img {
-    transform: scale(1.04) rotate(1deg);
+    transform: scale(1.14) rotate(3deg);
 }
 
 .resource-card:hover .resource-card-bar {
@@ -509,7 +525,7 @@ article.collapsed .article-content {
     align-items: center;
     overflow: hidden;
     height: 100%;
-    border-radius: 7px 0 0 7px;
+    border-radius: 8px 0 0 8px;
 }
 
 .resource-card-text-box {
@@ -531,6 +547,7 @@ article.collapsed .article-content {
 
 .resource-card-subtitle {
     color: var(--lighter-color);
+    font-style: italic;
 }
 
 .resource-card-bar {
@@ -543,13 +560,12 @@ article.collapsed .article-content {
 }
 
 .resource-card-description {
-    z-index: 10;
     font-size: 15px;
     color: var(--lighter-color);
     text-align: justify;
     overflow-y: scroll;
     text-overflow: ellipsis;
     flex: 1;
-    padding: 0 1rem;
+    padding: 0 .5rem 0 1rem;
     background-color: var(--darkest-color);
 }
